# gco

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  main.c
src/: lib.rs  shell.rs
tests/: all.rs
